...
        backgroundColor: 'rgba(0,0,255, 0.05)',
        width: '100%',
        height: '100%',
        justifyContent: 'center',
        alignItems: 'center',
      }}>
      <Box testID='login-screen' margin={3} justifyContent={'center'} alignItems={'center'}>
        <Image
          alt="App logo"
          accessibilityLabel="App logo"
          source={logoPath}
          resizeMode={'cover'}
          w={wp(logoWidth)}
...
            }}
          />
        </View>
        <HStack justifyContent={'center'}>
          {regularLogin && (
            <TouchableOpacity
              testID='login-with-cred'
              accessibilityLabel="Log in with password"
              onPress={() => navigation.navigate('RegularLogin')}>
              <Text
                style={{
                  fontSize: 14,
                  color: commonColors.primaryColor,
...
